--- a/src/app/student/pages/student-list/student-list.component.html
+++ b/src/app/student/pages/student-list/student-list.component.html
@@ -1,52 +1,38 @@
-<table mat-table [dataSource]="students$ | async" class="mat-elevation-z8">
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>ID</th>
-    <td mat-cell *matCellDef="let toot">{{ toot.id }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="firstName">
-    <th mat-header-cell *matHeaderCellDef>Firstname</th>
-    <td mat-cell *matCellDef="let student">{{ student.firstName }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef>LastName</th>
-    <td mat-cell *matCellDef="let student">{{ student.lastName }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="class">
-    <th mat-header-cell *matHeaderCellDef>Class</th>
-    <td mat-cell *matCellDef="let student">{{ student.class }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="update">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let student">
-      <button
-        mat-icon-button
-        (click)="openDialog(true, student)"
-      >
-        <mat-icon>edit</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let student">
-      <button
-        mat-icon-button
-        (click)="delete(student)"
-      >
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
-
-<button mat-fab color="warn" (click)="openDialog(false, undefined)">
-  <mat-icon>add</mat-icon>
+<button mat-flat-button color="warn" (click)="openDialog(false, undefined)" class="button">Ajouter un étudiant
 </button>
+
+<div class="tableau">
+<div *ngFor="let student of students$ | async">
+<mat-card class="example-card">
+  <mat-card-header>
+    <div mat-card-avatar style="background-size: cover; background-image: url(../../../../assets/img/miniature/{{student.id}}.jpg);"></div>
+    <mat-card-title>{{ student.firstName}}</mat-card-title>
+    <mat-card-subtitle>{{ student.firstName }} {{ student.lastName }}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="../../../../assets/img/photo/{{student.id}}.jpg">
+  <mat-card-content>
+    <p>
+      Année de naissance : {{student.birthYear}}
+    </p>
+    <p>
+      Classe: {{ student.class }}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+        <button
+          mat-icon-button
+          (click)="openDialog(true, student)"
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          (click)="delete(student)"
+          color = "warn"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
+  </mat-card-actions>
+</mat-card>
+</div>
+</div>
