--- a/src/app/student/pages/student-list/student-list.component.scss
+++ b/src/app/student/pages/student-list/student-list.component.scss
@@ -1,3 +1,24 @@
 table {
-    width: 100%;
-  }
+  width: 100%;
+}
+
+.example-card {
+  max-width: 400px;
+  box-shadow: 10px;
+}
+
+.example-header-image {
+  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-size: cover;
+}
+
+.tableau {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.button {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
